{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 17,
  "lineage": "84e7ad21-ad61-9f6c-f4d7-67d8c14d4207",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860102180300:internet-gateway/igw-02af6e3973d5f70dc",
            "id": "igw-02af6e3973d5f70dc",
            "owner_id": "860102180300",
            "region": "us-east-1",
            "vpc_id": "vpc-0d4d7f611adcef020"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "860102180300",
            "id": "igw-02af6e3973d5f70dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860102180300:route-table/rtb-08f754e626b1f13d1",
            "id": "rtb-08f754e626b1f13d1",
            "owner_id": "860102180300",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02af6e3973d5f70dc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4d7f611adcef020"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "860102180300",
            "id": "rtb-08f754e626b1f13d1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0302eab10f9799e7a",
            "region": "us-east-1",
            "route_table_id": "rtb-08f754e626b1f13d1",
            "subnet_id": "subnet-09608df32ab4aa080"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "860102180300",
            "id": "rtbassoc-0302eab10f9799e7a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860102180300:security-group/sg-0e394fde781ce00a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e394fde781ce00a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "typelearner-sg",
            "name_prefix": "",
            "owner_id": "860102180300",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4d7f611adcef020"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "860102180300",
            "id": "sg-0e394fde781ce00a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860102180300:subnet/subnet-09608df32ab4aa080",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09608df32ab4aa080",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "860102180300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "typelearner-public-subnet"
            },
            "tags_all": {
              "Name": "typelearner-public-subnet"
            },
            "vpc_id": "vpc-0d4d7f611adcef020"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "860102180300",
            "id": "subnet-09608df32ab4aa080",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860102180300:vpc/vpc-0d4d7f611adcef020",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067f4c29d05f3e5f7",
            "default_route_table_id": "rtb-0c3b80dc91543761e",
            "default_security_group_id": "sg-00c0bd1c877530194",
            "dhcp_options_id": "dopt-001fd82c168b22b16",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4d7f611adcef020",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3b80dc91543761e",
            "owner_id": "860102180300",
            "region": "us-east-1",
            "tags": {
              "Name": "typelearner-vpc"
            },
            "tags_all": {
              "Name": "typelearner-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "860102180300",
            "id": "vpc-0d4d7f611adcef020",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}